--- a/src/app/pages/customer/etp-manage/etp-manage.component.html
+++ b/src/app/pages/customer/etp-manage/etp-manage.component.html
@@ -1,5 +1,5 @@
 <div class="card-container">
-  <nz-tabset nzSize="large" [(nzSelectedIndex)]="tabIndex" [nzType]="'card'">
+  <nz-tabset nzSize="normal" [(nzSelectedIndex)]="tabIndex" [nzType]="'card'">
     <nz-tab *ngFor="let title of tabTitle" [nzTitle]="title">
       <div class="tab-card-list">
         <!--搜索-->
@@ -11,7 +11,7 @@
             <input type="text" nz-input [(ngModel)]="etpSearchVo.fullName" placeholder="企业名称"/>
           </nz-input-group>
           <button nz-button nzType="default" (click)="search(true)"><i nz-icon nzType="search"></i>查询</button>
-          <button nz-button nzType="primary" (click)="addModalShow(1)"><i nz-icon type="plus"></i>新增</button>
+          <button nz-button nzType="primary" (click)="addModalShow(1)" *ngIf="tabIndex === 0 || tabIndex === 1"><i nz-icon type="plus"></i>新增</button>
           <button nz-button nzType="default"><i nz-icon nzType="export" nzTheme="outline"></i>导出</button>
         </div>
         <!--列表-->
@@ -117,10 +117,10 @@
   <form nz-form [formGroup]="addOrEditForm">
     <!--公司全称-->
     <nz-form-item>
-      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="fullName" nzRequired>公司全称</nz-form-label>
+      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="etpName" nzRequired>公司全称</nz-form-label>
       <nz-form-control [nzSm]="10" [nzXs]="24">
-        <input nz-input id="fullName" formControlName="fullName" placeholder="公司全称"/>
-        <nz-form-explain *ngIf="addOrEditForm.get('fullName')?.dirty && addOrEditForm.get('fullName')?.errors">公司全称不为空!
+        <input nz-input id="etpName" formControlName="etpName" placeholder="公司全称"/>
+        <nz-form-explain *ngIf="addOrEditForm.get('etpName')?.dirty && addOrEditForm.get('etpName')?.errors">公司全称不为空!
         </nz-form-explain>
       </nz-form-control>
     </nz-form-item>
@@ -141,7 +141,7 @@
     <nz-form-item>
       <nz-form-label [nzSm]="4" [nzXs]="24" nzRequired>公司电话</nz-form-label>
       <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="公司电话非空">
-        <input nz-input id="etpPhone" formControlName="etpPhone" placeholder="公司电话"/>
+        <input nz-input id="telephone" formControlName="telephone" placeholder="公司电话"/>
       </nz-form-control>
     </nz-form-item>
     <!--公司传真-->
@@ -155,15 +155,15 @@
     <nz-form-item>
       <nz-form-label [nzSm]="4" [nzXs]="24" nzRequired>联系人姓名</nz-form-label>
       <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="联系人姓名非空">
-        <input nz-input id="linkName" formControlName="linkName" placeholder="联系人姓名"/>
+        <input nz-input id="contactName" formControlName="contactName" placeholder="联系人姓名"/>
       </nz-form-control>
     </nz-form-item>
     <!--联系人手机号码-->
     <nz-form-item>
-      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="linkMobile" nzRequired>联系人手机号码</nz-form-label>
+      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="contactMobile" nzRequired>联系人手机号码</nz-form-label>
       <nz-form-control [nzSm]="10" [nzXs]="24">
-        <input nz-input id="linkMobile" formControlName="linkMobile" maxlength="11" placeholder="11位手机号码"/>
-        <nz-form-explain *ngIf="addOrEditForm.get('linkMobile')?.dirty && addOrEditForm.get('linkMobile')?.errors">请输入正确手机号码!
+        <input nz-input id="contactMobile" formControlName="contactMobile" maxlength="11" placeholder="11位手机号码"/>
+        <nz-form-explain *ngIf="addOrEditForm.get('contactMobile')?.dirty && addOrEditForm.get('contactMobile')?.errors">请输入正确手机号码!
         </nz-form-explain>
       </nz-form-control>
     </nz-form-item>
@@ -171,7 +171,7 @@
     <nz-form-item>
       <nz-form-label [nzSm]="4" [nzXs]="24">联系人电话</nz-form-label>
       <nz-form-control [nzSm]="10" [nzXs]="24">
-        <input nz-input id="linkPhone" formControlName="linkPhone" placeholder="联系人电话"/>
+        <input nz-input id="contactPhone" formControlName="contactPhone" placeholder="联系人电话"/>
       </nz-form-control>
     </nz-form-item>
   </form>
